feat: add error text in check code screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="check_code_title">Código de entrada</string>
     <string name="check_code_message">Digite o código disponibilizado nas\n reuniões e no grupo do whatsapp para\n ter acesso ao aplicativo</string>
+    <string name="check_code_error_message">Código inválido</string>
     <string name="check_code_button_title">Verificar Código</string>
 </resources>
