feat: add home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="register_account_stage_of_photo_message">Por último, adicione uma foto sua para que o motorista da carona possa te reconhecer. 😁</string>
     <string name="register_account_stage_of_photo_circular_button_title">Adicionar foto</string>
     <string name="register_account_stage_of_photo_button_title">Finalizar</string>
+
+    <string name="home_username_title">Olá %s 👋</string>
 </resources>
