--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="register_account_stage_of_photo_button_title">Finalizar</string>
 
     <string name="home_available_car_ride_title">Caronas disponíveis</string>
+    <string name="home_not_available_car_ride_title">Nenhuma corrida disponível</string>
     <string name="home_username_title">Olá %s 👋</string>
 </resources>
