--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,6 @@
 
     <string name="create_car_ride_success_title">Sua Carona foi criada!</string>
     <string name="create_car_ride_success_message">Aguarde as pessoas entrarem na sua carona 🚗</string>
+    <string name="create_car_ride_success_button_title">Ir para minhas caronas</string>
+
 </resources>
