feat: add new information in user details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,7 +70,7 @@
     <string name="car_ride_details_username_title_empty">Nome não informado</string>
     <string name="car_ride_details_description_title_empty">Descrição não informada</string>
     <string name="car_ride_details_reservation_button_title">Quero essa carona!</string>
-    <string name="car_ride_details_user_details_title">Dados do Motorista</string>
+    <string name="car_ride_details_user_details_title">Placa do Motorista</string>
     <string name="car_ride_details_user_details_wpp_title">Whatsapp</string>
     <string name="car_ride_details_user_details_phone_title">Ligar</string>
     <string name="car_ride_details_complete_title">Sua Carona foi reservada!</string>
