feat: add route to details ride in progress of user and function to delete car ride of user

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,14 @@
     <string name="car_ride_details_complete_description">Encontre a pessoa  no horário e local marcado, volte sempre 😁</string>
     <string name="car_ride_details_complete_button_title">Ir para sua reservas</string>
 
+    <string name="my_ride_in_progress_details_cancel_button_title">Cancelar essa carona</string>
+    <string name="my_ride_in_progress_details_cancel_bottom_sheet_title">Deseja cancelar a carona?</string>
+    <string name="my_ride_in_progress_details_cancel_bottom_sheet_message">Pessoas estão contando com a sua carona, deseja realmente cancelar? 😥</string>
+    <string name="my_ride_in_progress_details_cancel_bottom_sheet_confirm_button_title">Cancelar Carona</string>
+    <string name="my_ride_in_progress_details_cancel_bottom_sheet_cancel_button_title">Voltar</string>
+    <string name="my_ride_in_progress_details_complete_title">Sua Carona foi cancelada!</string>
+    <string name="my_ride_in_progress_details_complete_description">Que pena que você cancelou a carona, mas continue sempre que puder compartilhando 😁🚗</string>
+    <string name="my_ride_in_progress_details_complete_button_title">Ir para a home</string>
+
     <string name="generic_connection_error">Ocorreu um erro de conexão.\nPor favor, tente novamente.</string>
 </resources>
