feat: add list of peoples in the ride

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,8 @@
     <string name="my_ride_in_progress_details_complete_title">Sua Carona foi cancelada!</string>
     <string name="my_ride_in_progress_details_complete_description">Que pena que você cancelou a carona, mas continue sempre que puder compartilhando 😁🚗</string>
     <string name="my_ride_in_progress_details_complete_button_title">Ir para a home</string>
+    <string name="my_ride_in_progress_details_reservations_title">Passageiros</string>
+    <string name="my_ride_in_progress_details_reservations_empty_title">Nenhum passageiro reservou a carona 😔</string>
 
     <string name="generic_connection_error">Ocorreu um erro de conexão.\nPor favor, tente novamente.</string>
 </resources>
