feat: add ride in progress details screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,5 +88,16 @@
     <string name="my_ride_in_progress_details_reservations_title">Passageiros</string>
     <string name="my_ride_in_progress_details_reservations_empty_title">Nenhum passageiro reservou a carona 😔</string>
 
+    <string name="ride_in_progress_details_cancel_button_title">Sair dessa carona</string>
+    <string name="ride_in_progress_details_cancel_bottom_sheet_title">Deseja cancelar sua reserva?</string>
+    <string name="ride_in_progress_details_cancel_bottom_sheet_message">Ao cancelar, você perderá sua vaga e precisará fazer uma nova reserva caso mude de ideia.</string>
+    <string name="ride_in_progress_details_cancel_bottom_sheet_confirm_button_title">Sair dessa reserva</string>
+    <string name="ride_in_progress_details_cancel_bottom_sheet_cancel_button_title">Voltar</string>
+    <string name="ride_in_progress_details_complete_title">Sua Reserva foi cancelada!</string>
+    <string name="ride_in_progress_details_complete_description">Que pena que você cancelou a reserva, mas sempre que precisar, volte! 😁🚗</string>
+    <string name="ride_in_progress_details_complete_button_title">Ir para a home</string>
+    <string name="ride_in_progress_details_reservations_title">Passageiros</string>
+    <string name="ride_in_progress_details_reservations_empty_title">Nenhum passageiro reservou a carona 😔</string>
+
     <string name="generic_connection_error">Ocorreu um erro de conexão.\nPor favor, tente novamente.</string>
 </resources>
